# faq-ai-chatbot

./: README.md  main.py  pyproject.toml
app/: streamlit_app.py
data/: faq.csv
models/: faq_index.faiss
scripts/: build_index.py
src/: config.py  embeddings.py  vector_store.py
