[project]
name = "faq-ai-chatbot"
version = "0.1.0"
description = "AI-powered FAQ chatbot using Sentence Transformers + FAISS + Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "app", "scripts"]